# 100DaysOfAI

./: main.py  pyproject.toml  requirements.txt
01.Numpy/: 01.py  1D.py  2D.py  multi-d.py  sequenceofnumbers.py
01.Numpy/NumpyArrayProperties/: dtype.py  ndim.py  shape.py  size.py
Langchain/Models/ChatModels/: 1_chatmodel_gemini.py  1_chatmodel_openai.py  4_chatmodel_hf_api.py
Langchain/Models/LLMs/: 1_llm_demo.py
langchainupdated/: pyproject.toml  requirements.txt
langchainupdated/updatedlangchain/: 1-lanchainintro.ipynb
