[project]
name = "100daysofai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.21.0",
    "jsonpatch>=1.33",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "numpy>=2.4.6",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "transformers>=5.12.1",
]
